--- a/leaderboard_sample.html
+++ b/leaderboard_sample.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><center>
+  <br>
+  <font size="5">The following is the list of top scorers.</font>
+  </br>
+</center>
+<br></br>
 <style>
 table {
   border-collapse: collapse;
@@ -11,9 +16,16 @@ table, th, td {
 }
 </style>
 </head>
-<body>
-
-<table>
+<body bgcolor="#E6E6FA">
+<center>
+"Gold medal: Arun Singh"
+<p></p>
+"Silver medal:Mukesh Gupta"
+<p></p>
+"Bronze medal:Saurav Kumar"
+<p></p>
+</center>
+<table align ="center" width="400" >
   <tr>
     <th>S.No.</th>
     <th>Username</th>
@@ -32,7 +44,28 @@ table, th, td {
     <td> <center> 98 </center> </td>
     <td> <center> 2 </center> </td>
   </tr>
+    <tr>
+    <td> <center> 3 </center> </td>
+    <td> Saurav Kumar </td>
+    <td> <center> 90 </center> </td>
+    <td> <center> 3 </center> </td>
+  </tr>
+      <tr>
+    <td> <center> 4 </center> </td>
+    <td> Saurabh mishra </td>
+    <td> <center> 80 </center> </td>
+    <td> <center> 4 </center> </td>
+  </tr>
+      <tr>
+    <td> <center> 5 </center> </td>
+    <td> Ram ji </td>
+    <td> <center> 70 </center> </td>
+    <td> <center> 5 </center> </td>
+  </tr>
 </table>
-
+<br></br>
+<center>
+<button type="button" style=”float: center” onclick="alert('Welcome')"><center>Back</center></button>
+</center>
 </body>
 </html>
