--- a/contestparticipate.html
+++ b/contestparticipate.html
@@ -15,7 +15,30 @@ tr:hover{
 </style>
 
 <body>
+  <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Page 1-1</a></li>
+          <li><a href="#">Page 1-2</a></li>
+          <li><a href="#">Page 1-3</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Page 2</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
+  </div>
+</nav>
 <div class="container">
+
  <div class="panel panel-default">
     <div class="panel-heading"><center>Contest Running</center><br>
       <center>Time left : 2:30</center><br>
@@ -91,9 +114,16 @@ tr:hover{
   <label><input type="checkbox" value="" >Option 3</label>
 </div></div>
   </div>
+  <div>
+  <center><button type="button" class="btn btn-primary">Next</button>&nbsp &nbsp <button type="button" class="btn btn-primary">Submit</button></center>
 </div>
+
+</div>
+
   </div>
+
 </div>
+
   
 </div>
 
